--- a/render.yaml
+++ b/render.yaml
@@ -13,5 +13,5 @@ services:
       - key: NODE_ENV
         value: production
       - key: MONGO_URI
-        value: mongodb://markijan303:zPxJ2BIwp9cIiC05@185.157.121.151:27017/blog
+        value: mongodb+srv://markijan303:zPxJ2BIwp9cIiC05@cluster0.tklmg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
